chore: refactor import paths

--- a/src/meta/binaries/Cargo.toml
+++ b/src/meta/binaries/Cargo.toml
@@ -43,6 +43,7 @@ databend-meta = { workspace = true }
 fastrace = { workspace = true }
 futures = { workspace = true }
 log = { workspace = true }
+raft-log = { workspace = true }
 rand = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true }
