feat: logging of logout request.

--- a/tests/sqllogictests/Cargo.toml
+++ b/tests/sqllogictests/Cargo.toml
@@ -25,7 +25,7 @@ mysql_async = { workspace = true }
 mysql_common = { workspace = true }
 rand = { workspace = true }
 regex = { workspace = true }
-reqwest = { workspace = true }
+reqwest = { workspace = true , features = ["cookies"]}
 serde = { workspace = true }
 serde_json = { workspace = true }
 sqllogictest = { workspace = true }
@@ -33,6 +33,8 @@ sqlparser = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
 walkdir = { workspace = true }
+cookie = "0.18.1"
+url = "2.5.2"
 
 [lints]
 workspace = true
