chore: use jiff crate replace some chrono
Done:

register_diff_functions(registry);
register_to_number_functions(registry);
register_add_functions(registry);
register_sub_functions(registry);
register_timestamp_to_date
register_date_to_timestamp
register_to_string
register_string_to_date
register_string_to_timestamp

TODO:

register_real_time_functions(registry);
register_rounder_functions(registry);

--- a/src/common/io/Cargo.toml
+++ b/src/common/io/Cargo.toml
@@ -24,6 +24,7 @@ ethnum = { workspace = true }
 geo = { workspace = true }
 geozero = { workspace = true }
 hex = { workspace = true }
+jiff = { workspace = true }
 lexical-core = { workspace = true }
 micromarshal = { workspace = true }
 roaring = { workspace = true, features = ["serde"] }
