chore: use jiff crate replace some chrono
Done:

register_diff_functions(registry);
register_to_number_functions(registry);
register_add_functions(registry);
register_sub_functions(registry);
register_timestamp_to_date
register_date_to_timestamp
register_to_string
register_string_to_date
register_string_to_timestamp

TODO:

register_real_time_functions(registry);
register_rounder_functions(registry);

--- a/src/query/expression/Cargo.toml
+++ b/src/query/expression/Cargo.toml
@@ -42,6 +42,7 @@ geozero = { workspace = true }
 hex = { workspace = true }
 hyper-util = { workspace = true }
 itertools = { workspace = true }
+jiff = { workspace = true }
 jsonb = { workspace = true }
 lexical-core = { workspace = true }
 log = { workspace = true }
@@ -59,6 +60,7 @@ serde_json = { workspace = true }
 simdutf8 = { workspace = true }
 strength_reduce = { workspace = true }
 terminal_size = { workspace = true }
+time = { workspace = true }
 tonic = { workspace = true }
 typetag = { workspace = true }
 unicode-segmentation = { workspace = true }
