--- a/src/common/io/Cargo.toml
+++ b/src/common/io/Cargo.toml
@@ -24,6 +24,7 @@ ethnum = { workspace = true }
 geo = { workspace = true }
 geos = { workspace = true }
 geozero = { workspace = true }
+jiff = { workspace = true }
 lexical-core = { workspace = true }
 micromarshal = { workspace = true }
 roaring = { workspace = true, features = ["serde"] }
