--- a/src/query/formats/Cargo.toml
+++ b/src/query/formats/Cargo.toml
@@ -29,6 +29,7 @@ chrono-tz = { workspace = true }
 geos = { workspace = true }
 geozero = { workspace = true }
 hex = { workspace = true }
+jiff = { workspace = true }
 jsonb = { workspace = true }
 lexical-core = { workspace = true }
 match-template = { workspace = true }
