--- a/Cargo.toml
+++ b/Cargo.toml
@@ -246,6 +246,7 @@ futures-util = "0.3.24"
 geo = { version = "0.28.0", features = ["use-serde"] }
 geos = { version = "9.0.0", features = ["static", "geo", "geo-types"] }
 geozero = { version = "0.14.0", features = ["default", "with-wkb", "with-geos", "with-geojson"] }
+gimli = "0.31.0"
 hashbrown = { version = "0.15.0", default-features = false }
 hickory-resolver = "0.24"
 http = "1"
@@ -264,6 +265,7 @@ micromarshal = "0.7.0"
 mysql_async = { version = "0.34", default-features = false, features = ["native-tls-tls"] }
 num-traits = "0.2.19"
 num_cpus = "1.13.1"
+object = "0.36.5"
 object_store_opendal = "0.48.1"
 once_cell = "1.15.0"
 openai_api_rust = "0.1"
@@ -319,6 +321,7 @@ reqwest = { version = "0.12", default-features = false, features = [
 ] }
 reqwest-hickory-resolver = "0.1"
 rotbl = { git = "https://github.com/drmingdrmer/rotbl", tag = "v0.1.2-alpha.6", features = [] }
+rustc-demangle = "0.1"
 rustix = "0.38.37"
 semver = "1.0.14"
 serde = { version = "1.0.164", features = ["derive", "rc"] }
