--- a/Cargo.toml
+++ b/Cargo.toml
@@ -513,6 +513,7 @@ nom-rule = "0.4"
 pratt = "0.4.0"
 pretty = "0.11.3"
 rspack-codespan-reporting = "0.11"
+rustc-demangle = "0.1"
 strsim = "0.10"
 strum_macros = "0.24"
 vergen = { version = "8.3.1", default-features = false, features = ["build", "cargo", "git", "gix", "rustc"] }
