--- a/Cargo.toml
+++ b/Cargo.toml
@@ -299,6 +299,7 @@ geo-types = "0.7.13"
 geohash = "0.13.0"
 geos = { version = "9.0.0", features = ["static", "geo", "geo-types"] }
 geozero = { version = "0.14.0", features = ["default", "with-wkb", "with-geos", "with-geojson"] }
+gimli = "0.31.0"
 globiter = "0.1"
 goldenfile = "1.4"
 h3o = "0.4.0"
@@ -354,6 +355,7 @@ num-bigint = "0.4.6"
 num-derive = "0.3.3"
 num-traits = "0.2.19"
 num_cpus = "1.13.1"
+object = "0.36.5"
 object_store_opendal = "0.48.1"
 once_cell = "1.15.0"
 openai_api_rust = "0.1"
@@ -514,6 +516,7 @@ nom-rule = "0.4"
 pratt = "0.4.0"
 pretty = "0.11.3"
 rspack-codespan-reporting = "0.11"
+rustc-demangle = "0.1"
 strsim = "0.10"
 strum_macros = "0.24"
 vergen = { version = "8.3.1", default-features = false, features = ["build", "cargo", "git", "gix", "rustc"] }
@@ -597,6 +600,7 @@ gimli = { opt-level = 3 }
 miniz_oxide = { opt-level = 3 }
 object = { opt-level = 3 }
 rustc-demangle = { opt-level = 3 }
+databend-common-exception = { opt-level = 3 }
 
 [profile.test]
 opt-level = 0
