--- a/src/meta/service/Cargo.toml
+++ b/src/meta/service/Cargo.toml
@@ -14,7 +14,7 @@ test = true
 [features]
 default = ["simd"]
 memory-profiling = ["databend-common-base/memory-profiling", "databend-common-http/memory-profiling"]
-simd = ["databend-common-arrow/simd"]
+simd = []
 io-uring = [
     "databend-common-meta-sled-store/io-uring",
     "databend-common-meta-raft-store/io-uring",
@@ -27,6 +27,7 @@ async-trait = { workspace = true }
 backon = { workspace = true }
 clap = { workspace = true }
 databend-common-arrow = { workspace = true }
+arrow-flight = { workspace = true}
 databend-common-base = { workspace = true }
 databend-common-grpc = { workspace = true }
 databend-common-http = { workspace = true }
