--- a/src/meta/client/Cargo.toml
+++ b/src/meta/client/Cargo.toml
@@ -26,6 +26,7 @@ databend-common-metrics = { workspace = true }
 databend-common-tracing = { workspace = true }
 derive_more = { workspace = true }
 fastrace = { workspace = true }
+arrow-flight = { workspace = true }
 futures = { workspace = true }
 itertools = { workspace = true }
 log = { workspace = true }
