--- a/src/common/arrow/Cargo.toml
+++ b/src/common/arrow/Cargo.toml
@@ -33,11 +33,13 @@ compute_sort = ["compute_take"]
 compute_take = []
 
 serde_types = ["serde", "serde_derive"]
+simd = []
 
 arrow-default = [
     "arrow",
     "compute",
     "serde_types",
+    "simd",
 ]
 
 
