--- a/src/query/service/Cargo.toml
+++ b/src/query/service/Cargo.toml
@@ -13,7 +13,7 @@ test = true
 
 [features]
 default = ["simd"]
-simd = []
+simd = ["databend-common-arrow/simd"]
 python-udf = ["arrow-udf-python"]
 disable_initial_exec_tls = ["databend-common-base/disable_initial_exec_tls"]
 jemalloc = ["databend-common-storages-system/jemalloc"]
