--- a/src/query/ee/Cargo.toml
+++ b/src/query/ee/Cargo.toml
@@ -14,6 +14,7 @@ test = true
 [dependencies]
 async-backtrace = { workspace = true }
 async-trait = { workspace = true }
+base64 = { workspace = true }
 chrono = { workspace = true }
 chrono-tz = { workspace = true }
 dashmap = { workspace = true }
