chore(ci): test with different license

--- a/.github/actions/setup_license/action.yml
+++ b/.github/actions/setup_license/action.yml
@@ -5,6 +5,10 @@ inputs:
     description: "Self-hosted runner provider, aws or gcp"
     required: true
     default: "aws"
+  type:
+    description: "License type, enterprise or trial"
+    required: true
+    default: "trial"
 
 runs:
   using: "composite"
@@ -13,15 +17,15 @@ runs:
       if: inputs.runner_provider == 'aws'
       shell: bash
       run: |
-        aws s3 cp s3://databend-ci/misc/license.key license.key
-        aws s3 cp s3://databend-ci/misc/license.json license.json
+        aws s3 cp s3://databend-ci/misc/license-${{ inputs.type }}.key license.key
+        aws s3 cp s3://databend-ci/misc/license-${{ inputs.type }}.json license.json
 
     - name: Get License from GCS
       if: inputs.runner_provider == 'gcp'
       shell: bash
       run: |
-        gcloud storage cp gs://databend-ci/misc/license.key license.key
-        gcloud storage cp gs://databend-ci/misc/license.json license.json
+        gcloud storage cp gs://databend-ci/misc/license-${{ inputs.type }}.key license.key
+        gcloud storage cp gs://databend-ci/misc/license-${{ inputs.type }}.json license.json
 
     - name: Output License
       shell: bash
