--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -52,6 +52,7 @@ jobs:
     with:
       build_profile: release
       runner_provider: aws
+      license_type: trial
 
   linux_hive:
     needs: changes
