--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,7 @@ jobs:
     with:
       build_profile: release
       runner_provider: aws
+      license_type: enterprise
 
   # macos:
   #   needs: linux
