--- a/.github/workflows/merge_group.yml
+++ b/.github/workflows/merge_group.yml
@@ -56,6 +56,7 @@ jobs:
     with:
       build_profile: release
       runner_provider: aws
+      license_type: enterprise
 
   ready:
     if: always()
