--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -26,6 +26,7 @@ databend-common-exception = { workspace = true }
 async-backtrace = { workspace = true }
 async-trait = { workspace = true }
 borsh = { workspace = true }
+bytes = { workspace = true }
 bytesize = { workspace = true }
 chrono = { workspace = true }
 ctrlc = { workspace = true }
