--- a/src/common/column/Cargo.toml
+++ b/src/common/column/Cargo.toml
@@ -24,6 +24,7 @@ foreign_vec = { workspace = true }
 bytemuck = { workspace = true }
 num-traits = { workspace = true }
 arrow-buffer = { workspace = true }
+hex = { workspace = true }
 arrow-data = { workspace = true }
 ethnum =  { workspace = true }
 simdutf8 = { workspace = true }
