--- a/src/query/expression/Cargo.toml
+++ b/src/query/expression/Cargo.toml
@@ -14,6 +14,7 @@ arrow-array = { workspace = true }
 arrow-flight = { workspace = true }
 arrow-data = { workspace = true }
 arrow-buffer = { workspace = true }
+arrow-cast = { workspace = true }
 arrow-ipc = { workspace = true, features = ["lz4"] }
 arrow-schema = { workspace = true }
 arrow-select = { workspace = true }
