--- a/src/common/storage/Cargo.toml
+++ b/src/common/storage/Cargo.toml
@@ -34,6 +34,7 @@ regex = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true }
 thiserror = { workspace = true }
+url = { workspace = true }
 
 [dev-dependencies]
 
