--- a/src/meta/embedded/Cargo.toml
+++ b/src/meta/embedded/Cargo.toml
@@ -12,7 +12,7 @@ doctest = false
 test = true
 
 [features]
-io-uring = ["databend-common-meta-sled-store/io-uring", "databend-common-meta-raft-store/io-uring"]
+io-uring = ["databend-common-meta-raft-store/io-uring"]
 
 [dependencies]
 async-trait = { workspace = true }
@@ -20,9 +20,6 @@ databend-common-base = { workspace = true }
 databend-common-meta-api = { workspace = true }
 databend-common-meta-kvapi = { workspace = true }
 databend-common-meta-raft-store = { workspace = true }
-databend-common-meta-sled-store = { workspace = true }
-databend-common-meta-stoerr = { workspace = true }
-databend-common-meta-types = { workspace = true }
 databend-common-tracing = { workspace = true }
 fastrace = { workspace = true }
 log = { workspace = true }
