refactor(query): refactor geometry functions

--- a/src/query/ast/Cargo.toml
+++ b/src/query/ast/Cargo.toml
@@ -15,7 +15,7 @@ doctest = false
 derive-visitor = { workspace = true }
 enum-as-inner = { workspace = true }
 ethnum = { workspace = true }
-fast-float = { workspace = true }
+fast-float2 = { workspace = true }
 fastrace = { workspace = true }
 indent = { workspace = true }
 itertools = { workspace = true }
