--- a/Cargo.toml
+++ b/Cargo.toml
@@ -286,10 +286,8 @@ futures = "0.3.24"
 futures-async-stream = { version = "0.2.7" }
 futures-util = "0.3.24"
 geo = { version = "0.28.0", features = ["use-serde"] }
-geo-types = "0.7.13"
 geohash = "0.13.0"
-geos = { version = "9.0.0", features = ["static", "geo", "geo-types"] }
-geozero = { version = "0.14.0", features = ["default", "with-wkb", "with-geos", "with-geojson"] }
+geozero = { version = "0.14.0", features = ["with-geo", "with-geojson", "with-wkb", "with-wkt"] }
 gimli = "0.31.0"
 globiter = "0.1"
 goldenfile = "1.4"
@@ -318,7 +316,7 @@ jaq-core = "1.5.1"
 jaq-interpret = "1.5.0"
 jaq-parse = "1.0.3"
 jaq-std = "1.6.0"
-jsonb = "0.4.3"
+jsonb = "0.4.4"
 jwt-simple = { version = "0.12.10", default-features = false, features = ["pure-rust"] }
 lenient_semver = "0.4.2"
 levenshtein_automata = "0.2.1"
@@ -377,7 +375,7 @@ openraft = { version = "0.10.0", features = [
 ] }
 opensrv-mysql = { version = "0.7.0", features = ["tls"] }
 orc-rust = "0.5.0"
-ordered-float = { version = "4.1.0", default-features = false }
+ordered-float = { version = "4.5.0", default-features = false }
 ordq = "0.2.0"
 p256 = "0.13"
 parking_lot = "0.12.1"
@@ -391,7 +389,7 @@ pin-project = "1"
 pin-project-lite = "0.2.9"
 poem = { version = "3.0", features = ["openssl-tls", "multipart", "compression", "cookie"] }
 pot = "2.0.0"
-pprof = { version = "0.13.0", features = [
+pprof = { version = "0.14.0", features = [
     "flamegraph",
     "protobuf-codec",
     "protobuf",
@@ -499,7 +497,7 @@ zstd = "0.12.3"
 # AST needed
 cargo-license = "0.6.1"
 cargo_metadata = "0.18"
-fast-float = "0.2.0"
+fast-float2 = "0.2.3"
 gix = "0.63.0"
 indent = "0.1.1"
 logos = "0.12.1"
@@ -619,7 +617,6 @@ backtrace = { git = "https://github.com/rust-lang/backtrace-rs.git", rev = "7226
 color-eyre = { git = "https://github.com/eyre-rs/eyre.git", rev = "e5d92c3" }
 deltalake = { git = "https://github.com/delta-io/delta-rs", rev = "3038c145" }
 ethnum = { git = "https://github.com/datafuse-extras/ethnum-rs", rev = "4cb05f1" }
-jsonb = { git = "https://github.com/databendlabs/jsonb", rev = "ada713c" }
 openai_api_rust = { git = "https://github.com/datafuse-extras/openai-api", rev = "819a0ed" }
 openraft = { git = "https://github.com/databendlabs/openraft", tag = "v0.10.0-alpha.7" }
 orc-rust = { git = "https://github.com/datafusion-contrib/orc-rust", rev = "dfb1ede" }
