--- a/src/query/formats/Cargo.toml
+++ b/src/query/formats/Cargo.toml
@@ -26,7 +26,6 @@ async-trait = { workspace = true }
 base64 = { workspace = true }
 bstr = { workspace = true }
 chrono-tz = { workspace = true }
-geos = { workspace = true }
 geozero = { workspace = true }
 hex = { workspace = true }
 jsonb = { workspace = true }
@@ -47,4 +46,4 @@ tokio = { workspace = true }
 workspace = true
 
 [package.metadata.cargo-machete]
-ignored = ["geos", "match-template"]
+ignored = ["match-template"]
