feat: add aws glue as an iceberg connection type (#16824)
* added aws glue catalog as option for metastore

* linted

* removed unused dependencies

* ran lint

* added test

* put toml files in order

* added proto test

* changed test to use glue as a catalog option

* added props for test

* got rid of extra block_in_place

* linted

---------

Co-authored-by: chase.grainger <chase.grainger@agvance.net>
Co-authored-by: Ubuntu <ubuntu@ip-172-31-26-21.ec2.internal>

--- a/src/query/storages/iceberg/Cargo.toml
+++ b/src/query/storages/iceberg/Cargo.toml
@@ -25,6 +25,7 @@ databend-storages-common-table-meta = { workspace = true }
 fastrace = { workspace = true }
 futures = { workspace = true }
 iceberg = { workspace = true }
+iceberg-catalog-glue = { workspace = true }
 iceberg-catalog-hms = { workspace = true }
 iceberg-catalog-rest = { workspace = true }
 match-template = { workspace = true }
