refactor: remove EmbeddedMeta (#16847)
* refactor: add InMemoryMeta for testing

* refactor: remove EmbeddedMeta

EmbeddedMeta is no longer used and should be removed.
Replace EmbeddedMeta with InMemoryMeta which is design for testing
purpose only.

* test: InMemoryMeeta

* M  src/meta/embedded/src/meta_embedded.rs

* M  src/meta/embedded/tests/it/kv_api_impl.rs

* M  src/meta/store/src/lib.rs

* M  src/meta/raft-store/src/mem_sm.rs

* M  src/meta/embedded/src/meta_embedded.rs

* M  Cargo.lock

* M  Cargo.lock

* M  src/meta/embedded/src/lib.rs

* D  src/meta/embedded/src/kv_api_impl.rs

* M  src/meta/embedded/src/lib.rs

* M  Cargo.lock

* M  Cargo.lock

--- a/src/meta/embedded/Cargo.toml
+++ b/src/meta/embedded/Cargo.toml
@@ -12,7 +12,7 @@ doctest = false
 test = true
 
 [features]
-io-uring = ["databend-common-meta-sled-store/io-uring", "databend-common-meta-raft-store/io-uring"]
+io-uring = ["databend-common-meta-raft-store/io-uring"]
 
 [dependencies]
 async-trait = { workspace = true }
@@ -20,13 +20,8 @@ databend-common-base = { workspace = true }
 databend-common-meta-api = { workspace = true }
 databend-common-meta-kvapi = { workspace = true }
 databend-common-meta-raft-store = { workspace = true }
-databend-common-meta-sled-store = { workspace = true }
-databend-common-meta-stoerr = { workspace = true }
-databend-common-meta-types = { workspace = true }
 databend-common-tracing = { workspace = true }
 fastrace = { workspace = true }
-log = { workspace = true }
-tempfile = { workspace = true }
 
 [dev-dependencies]
 anyhow = { workspace = true }
