--- a/.github/workflows/reuse.linux.yml
+++ b/.github/workflows/reuse.linux.yml
@@ -336,3 +336,13 @@ jobs:
       build_profile: ${{ inputs.build_profile }}
       runner_provider: ${{ inputs.runner_provider }}
       license_type: ${{ inputs.license_type }}
+
+  test_publish:
+    needs: [build]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/pack_binaries
+        with:
+          version: 1.2
+          target: x86_64-unknown-linux-gnu
+          category: default
