chore(query): spilt binary symbol

--- a/.github/actions/pack_binaries/action.yml
+++ b/.github/actions/pack_binaries/action.yml
@@ -24,6 +24,7 @@ runs:
         path: distro/bin
         artifacts: metactl,meta,query
     - name: Pack Binaries
+      shell: bash
       run: |
         target=${{ inputs.target }}
         version=${{ inputs.version }}
@@ -56,6 +57,7 @@ runs:
         path: ${pkg_name}.tar.gz
         retention-days: 1
     - name: Pack DBG Binaries
+      shell: bash
       run: |
         target=${{ inputs.target }}
         version=${{ inputs.version }}
