--- a/src/query/storages/common/table_meta/Cargo.toml
+++ b/src/query/storages/common/table_meta/Cargo.toml
@@ -12,6 +12,7 @@ dev = ["snap"]
 [dependencies]
 
 databend-common-base = { workspace = true }
+databend-common-native = { workspace = true }
 databend-common-datavalues = { workspace = true }
 databend-common-exception = { workspace = true }
 databend-common-expression = { workspace = true }
