--- a/src/common/storage/Cargo.toml
+++ b/src/common/storage/Cargo.toml
@@ -16,6 +16,7 @@ async-backtrace = { workspace = true }
 chrono = { workspace = true }
 dashmap = { workspace = true, features = ["serde"] }
 databend-common-column = { workspace = true }
+databend-common-native = { workspace = true }
 databend-common-auth = { workspace = true }
 databend-common-base = { workspace = true }
 databend-common-exception = { workspace = true }
