--- a/src/meta/service/Cargo.toml
+++ b/src/meta/service/Cargo.toml
@@ -12,9 +12,8 @@ doctest = false
 test = true
 
 [features]
-default = ["simd"]
+default = []
 memory-profiling = ["databend-common-base/memory-profiling", "databend-common-http/memory-profiling"]
-simd = ["databend-common-column/simd"]
 io-uring = [
     "databend-common-meta-sled-store/io-uring",
     "databend-common-meta-raft-store/io-uring",
@@ -28,7 +27,6 @@ async-trait = { workspace = true }
 backon = { workspace = true }
 clap = { workspace = true }
 databend-common-base = { workspace = true }
-databend-common-column = { workspace = true }
 databend-common-grpc = { workspace = true }
 databend-common-http = { workspace = true }
 databend-common-meta-api = { workspace = true }
